--- a/styles/components.css
+++ b/styles/components.css
@@ -6,8 +6,10 @@
     font-size: 20px;
 }
 .productCard > .details .title{
+    font-family: "Satoshi";
     font-size: 0.8em;
     font-weight: 700;
+    text-transform: capitalize;
 }
 .productCard > .details .rating{
     font-size: 0.6em;
