--- a/styles/utilidades.css
+++ b/styles/utilidades.css
@@ -4,14 +4,23 @@
     font-weight: 700;
     text-transform: uppercase;
     font-size: 2.2rem;
+    color: #000;
+    
 }
-.section > .title{
+.section .title{
     font-family: "IntegralCF";
     text-transform: uppercase;
     font-weight: 700;
     text-align: center;
     text-wrap: true;
     font-size: 32px;
+}
+
+.wrapBalance{
+    text-wrap: balance;
+}
+.alignLeft{
+    text-align: left;
 }
 
 .bottomDivision{
@@ -29,6 +38,7 @@
 }
 
 /* View All btn */
+.btns,
 .mainField,
 .viewAll{
     display: inline-flex;  
@@ -44,4 +54,13 @@
     max-width: 100%;
     height: 40px;
     font-weight: 500;
+}
+.btnWhite{
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #0000001a;
+}
+.btnBlack{
+    background-color: #000;
+    color: #fff;
 }
